fixes and feedback

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         pip install -e ".[develop]"
     - name: Lint
       run: |
-        pytest . --pylint -m pylint --pylint-rcfile=.python_starter_pylintrc
+        pytest . --pylint -m pylint --pylint-rcfile=.pylintrc
   static-type-checking:
     runs-on: ubuntu-latest
     strategy:
