--- a/.pylintrc
+++ b/.pylintrc
@@ -7,7 +7,7 @@ extension-pkg-whitelist=numpy,pybullet
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS,venv
+ignore=CVS,venv,.venv
 
 # Add paths to the blacklist.
 ignore-paths=
