--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,14 +38,14 @@ target-version = ["py310"]
 py_version = 310
 profile = "black"
 multi_line_output = 2
-skip_glob = ["venv/*"]
+skip_glob = ["venv/*", ".venv/*"]
 split_on_trailing_comma = true
 
 [tool.mypy]
 strict_equality = true
 disallow_untyped_calls = true
 warn_unreachable = true
-exclude = ["venv/*"]
+exclude = ["venv/*", ".venv/*"]
 
 [[tool.mypy.overrides]]
 module = [
